# pylance-worktree-demo

./: .gitignore  README.md  pyproject.toml
demo_package/: __init__.py
demo_package/algo/: analyzer.py  processor.py
demo_package/api/: endpoints.py
demo_package/core/: __init__.py  config.py  logger.py
